tests/error/type_errors/unary_not_arith.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy
5:    def foo() -> int:
6:        return -True
                  ^^^^
GuppyTypeError: Expected expression of type `int` or `float`, but got `True` of type `bool`
